k3s_cluster/base/dmz/alternative-frontends/invidious/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dmz
  labels:
    app: dmz-frontalt-invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dmz-frontalt-invidious
  template:
    metadata:
      labels:
        app: dmz-frontalt-invidious
    spec:
      tolerations:
        - key: node.kubernetes.io/not-ready
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10
        - key: node.kubernetes.io/unreachable
          operator: Exists
          effect: NoExecute
          tolerationSeconds: 10

      serviceAccountName: serviceaccount
      containers:
        - name: invidious
          image: quay.io/invidious/invidious:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/v1/trending
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /invidious/config/config.yml
              subPath: config.yml
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: config
          secret:
            secretName: invidious-config
