k3s_cluster/base/dmz/alternative-frontends/invidious/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: dmz
  labels:
    app: dmz-frontalt-invidious
spec:
  type: ClusterIP
  selector:
    app: dmz-frontalt-invidious
  ports:
    - name: web
      protocol: TCP
      port: 6625
      targetPort: 3000
    - name: companion
      protocol: TCP
      port: 6626
      targetPort: 8282
